# techno_training

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
api/: main.py  nba_api_functions.py
